[Refactor/#3]: 일부 코드 정리

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,8 @@
     "prettier"
   ],
   "rules": {
+    "no-var": "warn",
+    "@typescript-eslint/no-explicit-any": "off",
     "react/react-in-jsx-scope": "off", // React import 불필요
     "react/jsx-key": "warn", // 반복문으로 생성하는 요소에 key 강제
     "react/jsx-filename-extension": [
