--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "cookies-next": "^4.2.1",
     "framer-motion": "^11.2.6",
     "next": "13.5.6",
     "react": "^18",
