--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
+    "react-lottie-player": "^2.0.0",
     "react-markdown": "^9.0.1",
     "tailwind-scrollbar-hide": "^1.1.7",
     "zustand": "^4.5.2"
