--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@frolog/frolog-api": "^0.2.1",
+    "@tanstack/react-query": "^5.40.1",
     "axios": "^1.7.2",
     "cookies-next": "^4.2.1",
     "framer-motion": "^11.2.6",
