--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookies-next": "^4.2.1",
     "framer-motion": "^11.2.6",
     "next": "13.5.6",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
