--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.2",
     "cookies-next": "^4.2.1",
     "framer-motion": "^11.2.6",
+    "jsonwebtoken": "^9.0.2",
     "next": "13.5.6",
     "next-auth": "^4.24.7",
     "react": "^18",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
