--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,7 @@
     "node": true,
     "es6": true
   },
-  "ignorePatterns": ["public"], // eslint 미적용될 폴더나 파일
+  "ignorePatterns": ["public", "src/middleware.ts", "src/types"], // eslint 미적용될 폴더나 파일
   "extends": [
     "next/core-web-vitals",
     "airbnb",
@@ -23,9 +23,18 @@
   ],
   "rules": {
     "no-var": "warn",
+    "no-alert": "off",
+    "no-param-reassign": "off",
+    "jsx-a11y/no-autofocus": "off",
+    "import/prefer-default-export": "off",
+    "react/require-default-props": "off",
+    "consistent-return": "off",
+    "import/no-cycle": "off",
+    "react/jsx-props-no-spreading": "off",
     "@typescript-eslint/no-unused-vars": "error",
     "@typescript-eslint/no-explicit-any": "off",
     "react/react-in-jsx-scope": "off", // React import 불필요
+    "react-hooks/exhaustive-deps": "warn",
     "react/jsx-key": "warn", // 반복문으로 생성하는 요소에 key 강제
     "react/jsx-filename-extension": [
       // 파일 확장자 .jx, .ts, .tsx 허용
