--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,8 @@
   "rules": {
     "no-var": "warn",
     "no-alert": "off",
+    "jsx-a11y/click-events-have-key-events": "warn",
+    "jsx-a11y/no-static-element-interactions": "warn",
     "no-param-reassign": "off",
     "jsx-a11y/no-autofocus": "off",
     "import/prefer-default-export": "off",
