--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@frolog/frolog-api": "^0.2.1",
+    "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.40.1",
     "axios": "^1.7.2",
     "cookies-next": "^4.2.1",
