--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
   "rules": {
     "no-var": "warn",
     "no-alert": "off",
+    "no-nested-ternary": "warn",
     "jsx-a11y/click-events-have-key-events": "warn",
     "jsx-a11y/no-static-element-interactions": "warn",
     "no-param-reassign": "off",
