--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
     "no-var": "warn",
     "no-alert": "off",
     "no-nested-ternary": "warn",
+    "jsx-a11y/control-has-associated-label": "off",
     "jsx-a11y/click-events-have-key-events": "warn",
     "jsx-a11y/no-static-element-interactions": "warn",
     "no-param-reassign": "off",
