--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookies-next": "^4.2.1",
     "framer-motion": "^11.2.6",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "next": "13.5.6",
     "next-auth": "^4.24.7",
     "react": "^18",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/lodash": "^4.17.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
