--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -73,7 +73,7 @@
       },
       {
         "selector": "variable",
-        "format": ["camelCase", "UPPER_CASE"]
+        "format": ["camelCase", "UPPER_CASE", "snake_case"]
       },
       {
         "selector": "function", // exported function (컴포넌트 명)
