--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@frolog/frolog-api": "^0.2.11",
+    "@frolog/frolog-api": "^0.2.12-dev2",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.40.1",
     "axios": "^1.7.2",
@@ -19,6 +19,7 @@
     "lodash": "^4.17.21",
     "next": "13.5.6",
     "next-auth": "^4.24.7",
+    "nextjs-toploader": "^3.6.15",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
