--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
     "no-alert": "off",
     "no-plusplus": "off",
     "no-nested-ternary": "warn",
+    "import/no-extraneous-dependencies": "off",
     "react/jsx-no-useless-fragment": "off",
     "jsx-a11y/control-has-associated-label": "off",
     "jsx-a11y/click-events-have-key-events": "warn",
