--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nextjs-toploader": "^3.6.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-error-boundary": "^4.0.13",
     "react-hook-form": "^7.51.5",
     "react-lottie-player": "^2.0.0",
     "react-markdown": "^9.0.1",
