--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@frolog/frolog-api": "^0.2.16-dev1",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.40.1",
+    "@types/react-slick": "^0.23.13",
     "axios": "^1.7.2",
     "cookies-next": "^4.2.1",
     "framer-motion": "^11.2.6",
@@ -26,6 +27,7 @@
     "react-hook-form": "^7.51.5",
     "react-lottie-player": "^2.0.0",
     "react-markdown": "^9.0.1",
+    "react-slick": "^0.30.2",
     "tailwind-scrollbar-hide": "^1.1.7",
     "zustand": "^4.5.2"
   },
@@ -51,6 +53,7 @@
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
