[API/#54]: 프로필 상세 조회 API 연동

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
     "no-var": "warn",
     "no-alert": "off",
     "no-plusplus": "off",
+    "no-else-return": "off",
     "no-nested-ternary": "warn",
     "class-methods-use-this": "off",
     "@typescript-eslint/ban-types": "off",
