--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-lottie-player": "^2.0.0",
     "react-markdown": "^9.0.1",
     "react-slick": "^0.30.2",
+    "sharp": "^0.33.5",
     "tailwind-scrollbar-hide": "^1.1.7",
     "zustand": "^4.5.2"
   },
