--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@frolog/frolog-api": "^0.2.17",
+    "@frolog/frolog-api": "^0.2.17-fix1",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.40.1",
     "@types/react-slick": "^0.23.13",
