[Fix/#62]: 빌드 오류 수정

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
     "no-alert": "off",
     "no-plusplus": "off",
     "no-else-return": "off",
+    "no-lonely-if": "off",
     "no-nested-ternary": "warn",
     "class-methods-use-this": "off",
     "@typescript-eslint/ban-types": "off",
