--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
   ],
   "rules": {
     "no-var": "warn",
+    "arrow-body-style": "warn",
     "no-alert": "off",
     "no-plusplus": "off",
     "no-else-return": "off",
