--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.21",
     "next": "13.5.6",
     "next-auth": "^4.24.7",
+    "next-pwa": "^5.6.0",
     "nextjs-toploader": "^3.6.15",
     "react": "^18",
     "react-dom": "^18",
