--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,8 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/$1" }]
+  "rewrites": [{ "source": "/(.*)", "destination": "/$1" }],
+  "build": {
+    "env": {
+      "NPM_RC": "@team-frolog"
+    }
+  }
 }
