[Setting/#68]: npmrc 업데이트

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
 @frolog:registry=http://dev.frolog.kr/verdaccio/
 @team-frolog:registry=https://npm.pkg.github.com
+//npm.pkg.github.com/:_authToken=GITHUB_TOKEN
