--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@tailwindcss/typography": "^0.5.13",
     "@team-frolog/eslint-config-web": "^1.0.0",
     "@team-frolog/prettier-config-web": "^0.0.0",
+    "@team-frolog/tailwind-config": "^0.0.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.6",
     "@types/node": "^20",
