--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,3 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/$1" }],
-  "build": {
-    "env": {
-      "NPM_RC": "@team-frolog"
-    }
-  }
+  "rewrites": [{ "source": "/(.*)", "destination": "/$1" }]
 }
