--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@types/react-slick": "^0.23.13",
     "axios": "^1.7.2",
     "cookies-next": "^4.2.1",
-    "framer-motion": "^11.2.6",
+    "framer-motion": "^11.11.15",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "next": "13.5.6",
@@ -27,7 +27,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-error-boundary": "^4.0.13",
-    "react-hook-form": "^7.51.5",
+    "react-hook-form": "^7.53.2",
     "react-lottie-player": "^2.0.0",
     "react-markdown": "^9.0.1",
     "react-slick": "^0.30.2",
@@ -36,6 +36,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@sentry/types": "^8.38.0",
     "@tailwindcss/typography": "^0.5.13",
     "@team-frolog/eslint-config-web": "^1.0.0",
     "@team-frolog/prettier-config-web": "^0.0.0",
