--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "autoprefixer": "^10",
     "eslint": "^8.57.0",
     "postcss": "^8",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^3",
     "typescript": "^5"
