[Fix/#87]: 메모 인덱스 수정

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
     "next.config.js"
   ], // eslint 미적용될 폴더나 파일
   "rules": {
-    "react/display-name": "off"
+    "react/display-name": "off",
+    "react/no-array-index-key": "warn"
   }
 }
