--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,9 @@
     "src/middleware.ts",
     "src/types",
     "tailwind.config.ts",
-    "next.config.js"
+    "next.config.js",
+    "jest.setup.js",
+    "jest.config.js"
   ], // eslint 미적용될 폴더나 파일
   "rules": {
     "react/display-name": "off",
