--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --passWithNoTests",
+    "test:watch": "jest --watchAll --passWithNoTests",
+    "coverage": "jest --coverage"
   },
   "dependencies": {
     "@frolog/frolog-api": "^1.0.2",
@@ -38,6 +41,10 @@
     "@team-frolog/eslint-config-web": "^1.0.0",
     "@team-frolog/prettier-config-web": "^0.0.0",
     "@team-frolog/tailwind-config": "^0.0.2",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.6",
     "@types/node": "^20",
@@ -46,11 +53,14 @@
     "@typescript-eslint/parser": "^7.14.1",
     "autoprefixer": "^10",
     "eslint": "^8.57.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^3",
+    "ts-jest": "^29.2.5",
     "typescript": "^5"
   },
   "prettier": "@team-frolog/prettier-config-web"
