--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,8 @@
     "tailwind.config.ts",
     "next.config.js",
     "jest.setup.js",
-    "jest.config.js"
+    "jest.config.js",
+    "src/styles"
   ], // eslint 미적용될 폴더나 파일
   "rules": {
     "react/display-name": "off",
