[Setting/#112]: storybook 세팅

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,8 @@
     "next.config.js",
     "jest.setup.js",
     "jest.config.js",
-    "src/styles"
+    "src/styles",
+    "src/stories"
   ], // eslint 미적용될 폴더나 파일
   "rules": {
     "react/display-name": "off",
