--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint",
     "test": "jest --passWithNoTests --silent",
     "test:watch": "jest --watchAll --passWithNoTests",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@frolog/frolog-api": "^1.0.2",
@@ -36,8 +38,20 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^3.2.3",
     "@microsoft/tsdoc": "^0.15.1",
     "@sentry/types": "^8.38.0",
+    "@storybook/addon-docs": "^8.4.7",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/addon-onboarding": "^8.4.7",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/addon-styling": "^1.3.7",
+    "@storybook/addon-styling-webpack": "^1.0.1",
+    "@storybook/blocks": "^8.4.7",
+    "@storybook/nextjs": "^8.4.7",
+    "@storybook/react": "^8.4.7",
+    "@storybook/test": "^8.4.7",
     "@tailwindcss/typography": "^0.5.13",
     "@team-frolog/eslint-config-web": "^1.0.0",
     "@team-frolog/prettier-config-web": "^0.0.0",
@@ -45,6 +59,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
+    "@tomfreudenberg/next-auth-mock": "^0.5.6",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.6",
@@ -54,12 +69,14 @@
     "@typescript-eslint/parser": "^7.14.1",
     "autoprefixer": "^10",
     "eslint": "^8.57.0",
+    "eslint-plugin-storybook": "^0.11.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "slick-carousel": "^1.8.1",
+    "storybook": "^8.4.7",
     "tailwindcss": "^3",
     "ts-jest": "^29.2.5",
     "typescript": "^5"
