--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test:watch": "jest --watchAll --passWithNoTests",
     "coverage": "jest --coverage",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_3d4fe0209f30bbd"
   },
   "dependencies": {
     "@frolog/frolog-api": "^1.0.2",
@@ -68,6 +69,7 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/parser": "^7.14.1",
     "autoprefixer": "^10",
+    "chromatic": "^11.20.2",
     "eslint": "^8.57.0",
     "eslint-plugin-storybook": "^0.11.1",
     "jest": "^29.7.0",
