--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
   "dependencies": {
     "@frolog/frolog-api": "^1.0.2",
     "@sentry/nextjs": "^8.35.0",
-    "@storybook/addon-jest": "^8.4.7",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.40.1",
-    "@types/react-slick": "^0.23.13",
     "axios": "^1.7.2",
     "cookies-next": "^4.2.1",
     "framer-motion": "^11.11.15",
@@ -46,6 +44,7 @@
     "@storybook/addon-docs": "^8.4.7",
     "@storybook/addon-essentials": "^8.4.7",
     "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/addon-jest": "^8.4.7",
     "@storybook/addon-onboarding": "^8.4.7",
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addon-styling": "^1.3.7",
@@ -68,6 +67,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "@typescript-eslint/parser": "^7.14.1",
     "autoprefixer": "^10",
     "chromatic": "^11.20.2",
@@ -75,6 +75,8 @@
     "eslint-plugin-storybook": "^0.11.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "msw": "^2.7.0",
+    "msw-storybook-addon": "^2.0.4",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
