--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "coverage": "jest --coverage",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "chromatic": "npx chromatic --project-token=chpt_3d4fe0209f30bbd"
+    "chromatic": "npx chromatic --project-token=chpt_3d4fe0209f30bbd",
+    "prepare": "husky"
   },
   "dependencies": {
     "@frolog/frolog-api": "^1.0.2",
@@ -73,8 +74,10 @@
     "chromatic": "^11.20.2",
     "eslint": "^8.57.0",
     "eslint-plugin-storybook": "^0.11.1",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^15.3.0",
     "msw": "^2.7.0",
     "msw-storybook-addon": "^2.0.4",
     "postcss": "^8",
@@ -90,6 +93,12 @@
   "msw": {
     "workerDirectory": [
       "public"
+    ]
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "prettier --write",
+      "eslint --fix"
     ]
   }
 }
