--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "prettier": "prettier --check '**/*.{js,jsx,ts,tsx}'",
     "test": "jest --passWithNoTests --silent",
     "test:watch": "jest --watchAll --passWithNoTests",
     "coverage": "jest --coverage",
