--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "next-auth": "^4.24.7",
     "next-pwa": "^5.6.0",
     "react": "^18.3.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-error-boundary": "^4.0.13",
     "react-hook-form": "^7.53.2",
