[Feat/#152]: 우물 아이템 이동 API 연동

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@sentry/nextjs": "^8.35.0",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.40.1",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "axios": "^1.7.2",
     "cookies-next": "^4.2.1",
     "framer-motion": "^11.11.15",
@@ -30,8 +31,7 @@
     "next-auth": "^4.24.7",
     "next-pwa": "^5.6.0",
     "react": "^18.3.1",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-error-boundary": "^4.0.13",
     "react-hook-form": "^7.53.2",
